@@ -382,6 +382,7 @@ config OVMS_VEHICLE_NISSANLEAF
     bool "Include support for Nissan Leaf vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Nissan Leaf vehicles.
 
@@ -390,6 +391,7 @@ config OVMS_VEHICLE_RENAULTTWIZY
     default y
     depends on OVMS
     depends on OVMS_COMP_CANOPEN
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Renault Twizy vehicles.
 
@@ -398,6 +400,7 @@ config OVMS_VEHICLE_RENAULTZOE
     default y
     depends on OVMS
     depends on OVMS_COMP_CANOPEN
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Renault Zoe vehicles.
 
@@ -413,6 +416,7 @@ config OVMS_VEHICLE_MAXED3
     bool "Include support for Maxus eDeliver3 vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Maxus eDeliver3 vehicle.
         
@@ -420,6 +424,7 @@ config OVMS_VEHICLE_MAXE56
     bool "Include support for Maxus Euniq 5 6-seats vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Maxus Euniq 5 6-seats vehicle.
 
@@ -427,6 +432,7 @@ config OVMS_VEHICLE_KIASOULEV
     bool "Include support for Kia Soul EV vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Kia Soul EV vehicles.
 
@@ -434,6 +440,7 @@ config OVMS_VEHICLE_BOLTEV
     bool "Include support for Bolt EV/Ampera-e vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Bolt EV/Ampera-e vehicles"
 
@@ -441,6 +448,7 @@ config OVMS_VEHICLE_VOLTAMPERA
     bool "Include support for Volt/Ampera vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Volt/Ampera vehicles.
 
@@ -448,6 +456,7 @@ config OVMS_VEHICLE_THINKCITY
     bool "Include support for Think City vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Think City vehicles.
 
@@ -455,6 +464,7 @@ config OVMS_VEHICLE_SMARTED
     bool "Include support for Smart ED vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Smart ED vehicle.
 
@@ -462,6 +472,7 @@ config OVMS_VEHICLE_SMARTEQ
     bool "Include support for Smart ED/EQ Gen.4 vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Smart ED/EQ Gen.4 vehicle.
 
@@ -469,6 +480,7 @@ config OVMS_VEHICLE_MITSUBISHI
     bool "Include support for Mitsubishi iMiev vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Mitsubishi iMiev vehicle.
 
@@ -498,6 +510,7 @@ config OVMS_VEHICLE_VWEUP
     bool "Include support for VW e-up! vehicle"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for vehicles VW e-up! (all model years), Seat Mii electric, and Skoda Citigo-e iV.
 
@@ -512,6 +525,7 @@ config OVMS_VEHICLE_CADILLAC_C2_CTS
     bool "Include support for Cadillac 2nd gen CTS vehicle"
     default n
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Cadillac 2nd gen CTS vehicle.
 
@@ -519,6 +533,7 @@ config OVMS_VEHICLE_CHEVROLET_C6_CORVETTE
     bool "Include support for Chevrolet C6 Corvette vehicle"
     default n
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Chevrolet C6 Corvette vehicle.
 
@@ -526,6 +541,7 @@ config OVMS_VEHICLE_MG_EV
     bool "Include support for MG ZS EV vehicles"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for MG ZS EV vehicles.
 
@@ -533,6 +549,7 @@ config OVMS_VEHICLE_BMWI3
     bool "Include support for BMW i3/i3s"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for BMW i3 or i3s vehicles
 
@@ -540,6 +557,7 @@ config OVMS_VEHICLE_MINISE
     bool "Include support for Mini Cooper SE"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Mini Cooper SE vehicles
 
@@ -547,6 +565,7 @@ config OVMS_VEHICLE_HYUNDAI_IONIQVFL
     bool "Include support for Hyundai Ioniq Electric 28kWh (vFL)"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Hyundai Ioniq Electric 28kWh (vFL).
 
@@ -554,6 +573,7 @@ config OVMS_VEHICLE_HYUNDAI_IONIQ5
     bool "Include support for Hyundai Ioniq 5"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Hyundai Ioniq 5.
 
@@ -561,6 +581,7 @@ config OVMS_VEHICLE_JAGUARIPACE
     bool "Include support for Jaguar Ipace"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for Jaguar Ipace.
 
@@ -574,25 +595,9 @@ config OVMS_VEHICLE_BYD_ATTO3
     bool "Include support for BYD Atto 3"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable support for BYD Atto 3
-
-config OVMS_VEHICLE_RXTASK_STACK
-    int "Stack size for vehicle RX task"
-    default 6144
-    depends on OVMS
-    help
-        Stack size for the vehicle CAN RX task ("Vrx Task").
-        The RX task triggers events and metrics updates so needs to be
-        able to process the attached event/metrics listeners.
-        Standard stack usage of this task is currently around 1400 bytes.
-
-config OVMS_VEHICLE_CAN_RX_QUEUE_SIZE
-    int "Vehicle CAN queue size"
-    default 40
-    depends on OVMS
-    help
-        The size of the CAN bus RX queue (at the vehicle component).
 
 endmenu # Vehicle Support
 
@@ -770,6 +775,7 @@ config OVMS_COMP_OBD2ECU
     bool "Include support for OBDII ECU"
     default y
     depends on OVMS
+    depends on OVMS_COMP_POLLER
     help
         Enable to include support for OBDII ECU
 
@@ -830,6 +836,32 @@ config OVMS_COMP_CANOPEN_WRK_STACK
         Worker tasks only process TX jobs and don't trigger any event/metrics
         updates so can run with a smaller stack than the RX task.
         Standard stack usage for the Twizy is currently around 1000 bytes.
+
+menuconfig OVMS_COMP_POLLER
+    bool "Include ISOTP Poller framework"
+    default y
+    depends on OVMS
+    help
+        The ISOTP Poller framework provides a client API for ISOTP/VWTP
+        protocol address polling.
+        It provides some simple shell commands for status.
+
+config OVMS_VEHICLE_RXTASK_STACK
+    int "Stack size for ISOTP Poller RX task"
+    default 6144
+    depends on OVMS_COMP_POLLER
+    help
+        Stack size for the ISOTP Poller CAN RX task ("Vrx Task").
+        The RX task triggers events and metrics updates so needs to be
+        able to process the attached event/metrics listeners.
+        Standard stack usage of this task is currently around 1400 bytes.
+
+config OVMS_VEHICLE_CAN_RX_QUEUE_SIZE
+    int "Poller CAN queue size"
+    default 40
+    depends on OVMS_COMP_POLLER
+    help
+        The size of the CAN bus RX queue (at the ISOTP Poller component).
 
 config OVMS_COMP_PLUGINS
     bool "Include support for PLUGINS"
